fix(shared): `ElasticContainer` fix collapsing margin (#2150)
* fix(shared): `ElasticContainer` fix collapsing margin

* fix toolbar height so titles not chopped

---------

--- a/frontend/projects/ui/src/styles.scss
+++ b/frontend/projects/ui/src/styles.scss
@@ -188,6 +188,7 @@ ion-icon {
 }
 
 ion-toolbar {
+  line-height: 1.1;
   --min-height: 72px;
   --background: var(--ion-color-light);
 }
